# plugins

./: Cargo.toml
src/: app_plugin.rs  files_plugin.rs  lib.rs  windows_plugin.rs  wordlist_plugin.rs
