[package]
name = "plugins"
version = "0.1.0"
authors = ["Patrick Chan <patrickchan1999@gmail.com>"]

[dependencies]
dirs = "1.0"
filters = { git = "https://github.com/torch-rs/filters" }
open = "1.2.1"
searchers = { git = "https://github.com/torch-rs/searchers" }
sorters = { git = "https://github.com/torch-rs/sorters" }